add bridgeconfiguration and refactor HttpCorsIT
Signed-off-by: Lukas Kral <lukywill16@gmail.com>